--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                         <div class="flex flex-col gap-1">
                           <label for="name">اسمك بالكامل</label>
                           <input
-                            class="w-full p-2 border border-light-primary rounded-lg outline-none"
+                            class="w-full text-lg p-2 border border-light-primary rounded-lg outline-none"
                             type="text"
                             id="name"
                           />
@@ -417,7 +417,7 @@
                         <div class="flex flex-col gap-1">
                           <label for="name">رقم الهاتف</label>
                           <input
-                            class="w-full p-2 border border-light-primary rounded-lg outline-none"
+                            class="w-full text-lg p-2 border border-light-primary rounded-lg outline-none"
                             type="text"
                             id="phone-number"
                           />
@@ -427,7 +427,7 @@
                         <div class="flex flex-col gap-1">
                           <label for="name">العنوان بالتفصيل</label>
                           <textarea
-                            class="w-full p-2 border border-light-primary rounded-lg outline-none overflow-hidden"
+                            class="w-full text-lg p-2 border border-light-primary rounded-lg outline-none overflow-hidden"
                             id="address"
                           ></textarea>
                           <!-- <p>هذا الحقل مطلوب !</p> -->
