--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>E-Commerce</title>
     <!-- Tailwind CSS -->
     <link href="./output.css" rel="stylesheet" />
@@ -407,7 +408,7 @@
                         <div class="flex flex-col gap-1">
                           <label for="name">اسمك بالكامل</label>
                           <input
-                            class="w-full text-lg p-2 border border-light-primary rounded-lg outline-none"
+                            class="w-full p-2 border border-light-primary rounded-lg outline-none"
                             type="text"
                             id="name"
                           />
@@ -417,7 +418,7 @@
                         <div class="flex flex-col gap-1">
                           <label for="name">رقم الهاتف</label>
                           <input
-                            class="w-full text-lg p-2 border border-light-primary rounded-lg outline-none"
+                            class="w-full p-2 border border-light-primary rounded-lg outline-none"
                             type="text"
                             id="phone-number"
                           />
