--- a/index.html
+++ b/index.html
@@ -469,6 +469,6 @@
     </div>
 
     <script src="./swiper-bundle.min.js"></script>
-    <script src="index.js"></script>
+    <script src="app-obfuscated.js"></script>
   </body>
 </html>
