--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./swiper-bundle.min.css" />
   </head>
 
-  <body dir="rtl">
+  <body dir="rtl" class="bg-light-background">
     <div id="root">
       <!-- إعلان الشحن المجاني -->
       <section class="free-shipping">
