--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@
 
     <!-- استيراد Swiper JS -->
     <script src="node_modules/swiper/swiper-bundle.min.js"></script>
-    <script type="module" src="index.js"></script>
+    <script src="script-obfuscated.js"></script>
+    <!-- <script type="module" src="index.js"></script> -->
 
-    <!-- <script src="app-obfuscated.js"></script> -->
   </body>
 </html>
