--- a/index.html
+++ b/index.html
@@ -613,10 +613,10 @@
                   class="swiper-pagination static !w-full !text-center !my-5 !-translate-x-0"
                 ></div>
                 <div
-                  class="swiper-button-next text-light-primary bg-light-textPrimary w-[35px] h-[35px] rounded-full after:text-sm"
+                  class="swiper-button-next text-light-primary bg-light-textPrimary w-[35px] h-[35px] rounded-full after:text-sm after:font-bold"
                 ></div>
                 <div
-                  class="swiper-button-prev text-light-primary bg-light-textPrimary w-[35px] h-[35px] rounded-full after:text-sm"
+                  class="swiper-button-prev text-light-primary bg-light-textPrimary w-[35px] h-[35px] rounded-full after:text-sm after:font-bold"
                 ></div>
               </div>
             </div>
