--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <!-- استيراد Swiper CSS -->
-    <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css" />
 
     <!-- Tailwind CSS -->
     <link href="./output.css" rel="stylesheet" />
@@ -626,9 +626,8 @@
     </div>
 
     <!-- استيراد Swiper JS -->
-    <script src="node_modules/swiper/swiper-bundle.min.js"></script>
-    <!-- <script src="script-obfuscated.js"></script> -->
-    <script src="index.js"></script>
+    <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
+    <script src="./index.js"></script>
 
   </body>
 </html>
