--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       rel="stylesheet"
     />
     <!-- استيراد Swiper CSS -->
-    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="swiper-bundle.min.css" />
 
     <!-- Tailwind CSS -->
-    <link href="./output.css" rel="stylesheet" />
+    <link href="output.css" rel="stylesheet" />
   </head>
 
   <body dir="rtl" class="bg-light-background">
@@ -626,8 +626,8 @@
     </div>
 
     <!-- استيراد Swiper JS -->
-    <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="swiper-bundle.min.js"></script>
+    <script src="index.js"></script>
 
   </body>
 </html>
