--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 
     <!-- استيراد Swiper JS -->
     <script src="swiper-bundle.min.js"></script>
-    <script src="index.js"></script>
+    <script src="script-obfuscated.js"></script>
 
   </body>
 </html>
