--- a/index.html
+++ b/index.html
@@ -668,14 +668,23 @@
         <!-- video Product -->
         <section class="video-product px-5 py-10">
           <div class="container mx-auto">
-           <div class="flex flex-col justify-center items-center">
-            <h1 class="text-center text-3xl font-bold mb-8">شاهد دورة الإنتاج</h1>
-            <iframe class="w-full h-[750px] rounded-2xl" src="https://www.youtube.com/embed/ULYQ1oEOPIY?si=p64idxMUZ_TRDmz1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
-           </div>
+            <div class="flex flex-col justify-center items-center">
+              <h1 class="text-center text-3xl font-bold mb-8">
+                شاهد دورة الإنتاج
+              </h1>
+              <iframe
+                class="aspect-video w-full h-full rounded-2xl"
+                src="https://www.youtube.com/embed/ULYQ1oEOPIY?si=p64idxMUZ_TRDmz1"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen=""
+              >
+              </iframe>
+            </div>
           </div>
         </section>
-
-        
       </main>
     </div>
 
