--- a/index.html
+++ b/index.html
@@ -690,6 +690,6 @@
 
     <!-- استيراد Swiper JS -->
     <script src="swiper-bundle.min.js"></script>
-    <script src="script-obfuscated.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
