--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
                         />
                       </div>
                     </div>
+
+                    <div class="swiper-pagination mb-3"></div>
                   </div>
                   <!-- صور المصغرات -->
                   <div class="thumbnail-swiper hidden mt-5 md:block">
@@ -682,6 +684,100 @@
                 allowfullscreen=""
               >
               </iframe>
+            </div>
+          </div>
+        </section>
+
+        <!-- Recommends People -->
+        <section class="recommends-people px-5 py-10">
+          <div class="container mx-auto">
+            <h1 class="text-center text-3xl font-bold mb-8">يوصي بنا النخبة</h1>
+            <div
+              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-items-center items-center gap-5"
+            >
+              <div class="">
+                <img
+                  class="max-w-full object-cover"
+                  src="./imags/recommends-people-1.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <img
+                  class="max-w-full object-cover"
+                  src="./imags/recommends-people-2.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <img
+                  class="max-w-full object-cover"
+                  src="./imags/recommends-people-3.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <img
+                  class="max-w-full object-cover"
+                  src="./imags/recommends-people-4.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Services -->
+        <section class="services px-5 py-10">
+          <div class="container mx-auto">
+            <h1 class="text-center text-3xl font-bold mb-8">الأسئلة الأكثر شيوعا</h1>
+            <div
+              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center items-center gap-5"
+            >
+              <div class="accordion-element border border-light-primary p-4 rounded-3xl flex flex-col gap-4 w-full">
+                <div class="flex justify-between items-center">
+                  <p class="">هل يتوفر الصندوق بألوان متنوعة؟</p>
+                  <i class="icon-plus"></i>
+                </div>
+                <p class="">
+                  نعم، يتوفر الصندوق بمجموعة متنوعة من الألوان لتناسب جميع
+                  الأذواق.
+                </p>
+              </div>
+
+              <div class="accordion-element border border-light-primary p-4 rounded-3xl flex flex-col gap-4 w-full">
+                <p class="">هل يمكن غسل هذا الصندوق؟</p>
+                <p class="">
+                  نعم، يمكن غسل الصندوق بالغسالة ولكن بدرجة حرارة منخفضة.
+                </p>
+              </div>
+
+              <div class="accordion-element border border-light-primary p-4 rounded-3xl flex flex-col gap-4 w-full">
+                <p class="">هل يناسب هذا الصندوق الحوامل؟</p>
+                <p class="">
+                  نعم، يناسب الصندوق النساء الحوامل بفضل تصميمه الواسع والمريح.
+                </p>
+              </div>
+
+              <div class="accordion-element border border-light-primary p-4 rounded-3xl flex flex-col gap-4 w-full">
+                <p class="">هل يتوفر الصندوق بمقاسات أخرى؟</p>
+                <p class="">
+                  نعم، يتوفر الصندوق بمقاسات مختلفة ليناسب جميع الأحجام.
+                </p>
+              </div>
+
+              <div class="accordion-element border border-light-primary p-4 rounded-3xl flex flex-col gap-4 w-full">
+                <p class="">هل يمكن استرداد المبلغ ؟</p>
+                <p class="">
+                  نعم، يمكنكم طلب استرداد المبلغ خلال 30 يومًا بعد الشراء في
+                  حالة عدم الرضا عن المنتج.
+                </p>
+              </div>
+
+              <div class="accordion-element border border-light-primary p-4 rounded-3xl flex flex-col gap-4 w-full">
+                <p class="">سهل الاستعمال</p>
+                <p class="">مناسب لاي مناسبه والخروجات المختلفه</p>
+              </div>
             </div>
           </div>
         </section>
